Resolved the double borders on inputs

--- a/src/styles/Input.scss
+++ b/src/styles/Input.scss
@@ -4,14 +4,21 @@
   position: relative;
   display: flex;
   width: 100%;
+  height: 59px;
+  border-bottom: 1px solid rgb(191, 191, 191);
+}
+
+.input-wrapper:first-child {
+  border-top: 1px solid rgb(191, 191, 191);
 }
 
 .input {
-  border-top: 1px solid rgb(191, 191, 191);
-  border-bottom: 1px solid rgb(191, 191, 191);
+  display: flex;
+  align-items: center;
   width: 100%;
   outline: none;
-  padding: 1rem 0.75rem;
+  padding: 0 0.75rem;
+  height: 100%;
   &.focus {
     border: 1px solid $blue;
     box-shadow: inset 0px 0px 0px 0.5px $blue;
